# GLSL-Debugger

./: CMakeLists.txt
glsldb/: CMakeLists.txt  FunctionsMap.cpp  FunctionsMap.h  attachToProcess.cpp  colors.qt.h  editCallDialog.cpp  errorCodes.cpp  errorCodes.h  glslDevil.qrc  glsldb.cpp  loopDialog.cpp  loopDialog.qt.h  mainWindow.cpp  mainWindow.qt.h  mappings.cpp  mappings.h  progControl.cpp  progControl.qt.h  progControlWin.cpp  runLevel.h  selectionDialog.cpp  selectionDialog.qt.h  shVarModel.cpp  shVarModel.qt.h
glsldb/DebugLib/: CMakeLists.txt  glenumerants.c  glenumerants.h  hooks.c  initLib.c  replayFunction.h  shader.c  streamRecording.h
glsldb/DebugLib/generator/: BeginEndFunctionTest.pl  CMakeLists.txt  Enumerants.pl  FunctionHooks.pl  FunctionList.pl  FunctionPointerTypes.pl  FunctionRef.pl  GetProcAddressHook.pl  ReplayFunc.pl  Trampolines.pl  genSettings.pm  genTools.pm  genTypes.pm  generators.py  genfiles.py  getStreamHint.pl  glreader.pl  prePostExecuteList.pm  streamHintRef.pl  streamHints.pm
glsldb/DebugLib/generator/classes/: custom.py  enumerants.py  type.py
glsldb/GL/: README
glsldb/ShaderLib/: CMakeLists.txt  glslSyntaxHighlighter.cpp  shdatamanager.cpp  shdatamanager.h  shdockwidget.cpp  shdockwidget.h  shproxymodel.cpp  shproxymodel.h  shproxytreeview.cpp  shproxytreeview.h  shsourcedock.cpp  shsourcedock.h  shtreeview.h  shvardock.cpp  shvardock.h  shvaritem.cpp  shvaritem.h  shvarmodel.cpp  shvarmodel.h  shwatchdock.cpp  shwatchdock.h
glsldb/ShaderLib/data/: dataBox.cpp  dataBox.h  pixelBox.cpp  pixelBox.h  pixelBox.inc  pixelBox.inc.h  vertexBox.cpp  vertexBox.h
glsldb/ShaderLib/dialogs/: curveview.cpp  curveview.h  fragmenttest.cpp  fragmenttest.h  loop.cpp  loop.h  loopdata.cpp  loopdata.h  selection.cpp  selection.h
glsldb/ShaderLib/docks/: glslSyntaxHighlighter.h  shdockwidget.cpp  shdockwidget.h  shproxytreeview.h  shsourcedock.cpp  shsourcedock.h  shtreeview.cpp  shvardock.cpp  shvardock.h  shwatchdock.cpp  shwatchdock.h
glsldb/ShaderLib/models/: geometrydatamodel.cpp  geometrydatamodel.h  geometrytreeitem.cpp  geometrytreeitem.h  shtabledatamodel.cpp  shtabledatamodel.h  shuniforms.cpp  shuniforms.h  shvaritem.cpp  shvaritem.h  shvarmodel.cpp  shvarmodel.h  vertextablemodel.cpp  vertextablemodel.h
glsldb/ShaderLib/tests/: CMakeLists.txt  runner.cpp
glsldb/ShaderLib/ui/: fragmenttestdialog.ui  loopdialog.ui  selectiondialog.ui  shmappingwidget.ui  shsourcedock.ui  shvardock.ui  shwatchdock.ui  watchgeometry.ui  watchtable.ui  watchvector.ui
glsldb/ShaderLib/watch/: glscatter.cpp  glscatter.h  imageview.cpp  imageview.h  shmappingwidget.cpp  shmappingwidget.h  shwindowmanager.cpp  shwindowmanager.h  watchgeotree.cpp  watchgeotree.h  watchtable.cpp  watchtable.h  watchvector.cpp  watchvector.h  watchview.cpp  watchview.h
glsldb/ui/: mainWindow.ui
glsldb/utils/: dbgprint.c  hash.c  hash.h  p2pcopy.c  p2pcopy.h  sync.c
mesa-glsl/include/: ResourceLimits.h  ShaderLang.h
mesa-glsl/interface/: AstScope.cpp  AstScope.h  Changeable.cpp  CodeInsertion.cpp  Program.cpp  Shader.cpp  Shader.h  Variable.cpp
mesa-glsl/interface/visitors/: debugchange.cpp  debugjump.cpp  debugpath.cpp  debugpath.h
mesa-glsl/mesa/glsl/: ast_to_hir.cpp
mesa-glsl/tests/: Format.h
mesa-glsl/tests/units/: DebugJumpTest.h
